--- a/strona/index.html
+++ b/strona/index.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" href="style.css"/>
  </head>
  <body>
+ <div></div>
     
     <div class="LOGO">
       <button ><img height="150px" width="150px" src="pngfuel.com.png"/> </button>   
@@ -34,25 +35,25 @@
             <div class="item active">  
                 <div class="carousel-caption">
                   <h3>NAZWA_1</h3>
-                  <p>dwa s³owa o...</p>
+                  <p>dwa sï¿½owa o...</p>
                 </div>
             </div>
             <div class="item"> 
                 <div class="carousel-caption">
                   <h3>NAZWA_2</h3>
-                  <p>dwa s³owa o...</p>
+                  <p>dwa sï¿½owa o...</p>
                 </div>
             </div>
             <div class="item"> 
                 <div class="carousel-caption">
                   <h3>NAZWA_3</h3>
-                  <p>dwa s³owa o...</p>
+                  <p>dwa sï¿½owa o...</p>
                 </div>
             </div>
 	        <div class="item"> 
                 <div class="carousel-caption">
                   <h3>NAZWA_4</h3>
-                  <p>dwa s³owa o...</p>
+                  <p>dwa sï¿½owa o...</p>
                 </div>
             </div>       
          </div>
